--- a/src/dox/guideline.dox
+++ b/src/dox/guideline.dox
@@ -53,4 +53,5 @@
  *  If a public function can fail (for example setting a file),
  *   it should display the error to the user and return false,
  *   so the caller knows that something failed and he adapt his flow.
+ *   \note If something could fail, the dialog should inform the user, and should not be acceptable.
  */
