Moved dox documentation files and created SQL Schema page

--- a/dox/libraries.dox
+++ b/dox/libraries.dox
@@ -19,7 +19,7 @@
  **
  ****************************************************************************/
 
-/*! \mainpage Main
+/*! \page libraries_page Libraries
  *
- * \ref guideline_page
+ * \ref mdtsql_page
  */
