--- a/dox/guideline.dox
+++ b/dox/guideline.dox
@@ -78,4 +78,26 @@
  *   used as member of the class, using a unique_ptr.
  *   The ui_*h file can also be included in the *.cpp file.
  *   See Mdt::ItemEditor::StandardWindow to see a example of this usage.
+ *
+ * \section translations Translations
+ *
+ * \subsection translations_tr About using tr()
+ *
+ *  When a class is a subclass of QObject, simply using tr() works fine.
+ *
+ *  For a class that is not a subclass of QObject, Qt recommends using QCoreApplication::translate()
+ *   and provide the class name as context, so that Qt Linguist can display it the proper way to the translator.
+ *   Previously, many classes in Mdt libraries have added a tr() static member function, that simply called QObject::tr().
+ *   This is bad, because Qt Linguist also displayed all strings as QObject context,
+ *   and also trows a error message about missing Q_OBJECT macro when ts files are generated.
+ *   The recommanded solution is to create a macro in the source file (not in the header!).
+ *   For example, in MyClass.cpp:
+ *   \code
+ *    #include <QCoreApplication>
+ *
+ *    #define tr(sourceText) QCoreApplication::translate("MyClass", sourceText)
+ *
+ *    // In some method
+ *    const auto msg = tr("Some message");
+ *   \endcode
  */
