--- a/libs/Error_Core/translations/CMakeLists.txt
+++ b/libs/Error_Core/translations/CMakeLists.txt
@@ -2,7 +2,7 @@
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM 1)
 
 mdt_add_translations(
-  NAME Error
+  NAME Error_Core
   SOURCES_DIRECTORY ../src
   TS_FILES_DIRECTORY .
 )
