Imported API main page doc from master

--- a/dox/libs_Application.dox
+++ b/dox/libs_Application.dox
@@ -19,7 +19,7 @@
  **
  ****************************************************************************/
 
-/*! \page libs_application Application
+/*! \page libs_Application Application
  *
  *  In the main() function of a Mdt/Qt based application,
  *   a application class should be instanciated.
