--- a/dox/libs_ItemModel.dox
+++ b/dox/libs_ItemModel.dox
@@ -19,17 +19,19 @@
  **
  ****************************************************************************/
 
-/*! \page libraries_page Libraries
+/*! \page libs_ItemModel Item model library
  *
- * \ref libs_Application
- *
- * \ref libs_Error
- *
- * \ref libs_DeployUtils
- *
- * \ref libs_ItemModel
- *
- * \ref mdtsql_page
- *
- * \ref libs_itemeditor
+ * Some additions to Qt models (model/view framework)
  */
+
+
+namespace Mdt
+{
+
+  /*! \brief Item model library namespace
+   */
+  namespace ItemModel
+  {
+  }
+
+}
