Rename MdtAddTranslations -> MdtAddLibraryTranslations

--- a/libs/Application_Core/translations/CMakeLists.txt
+++ b/libs/Application_Core/translations/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM 1)
 
-mdt_add_translations(
-  NAME Application_Core
+mdt_add_library_translations(
+  TARGET Application_Core
   SOURCES_DIRECTORY ../src
   TS_FILES_DIRECTORY .
 )
