--- a/libs/ItemModel/translations/CMakeLists.txt
+++ b/libs/ItemModel/translations/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM 1)
 
-mdt_add_translations(
-  NAME ItemModel
+mdt_add_library_translations(
+  TARGET ItemModel
   SOURCES_DIRECTORY ../src
   TS_FILES_DIRECTORY .
 )
