--- a/libs/Numeric/translations/CMakeLists.txt
+++ b/libs/Numeric/translations/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM 1)
 
-mdt_add_translations(
-  NAME Numeric
+mdt_add_library_translations(
+  TARGET Numeric
   SOURCES_DIRECTORY ../src
   TS_FILES_DIRECTORY .
 )
