--- a/libs/Sql/translations/CMakeLists.txt
+++ b/libs/Sql/translations/CMakeLists.txt
@@ -2,7 +2,7 @@
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM 1)
 
 mdt_add_translations(
-  NAME Sql
+  TARGET Sql
   SOURCES_DIRECTORY ../src
   TS_FILES_DIRECTORY .
 )
