Create Container lib + implement StlContainer

--- a/dox/libs_Container.dox
+++ b/dox/libs_Container.dox
@@ -19,24 +19,17 @@
  **
  ****************************************************************************/
 
-/*! \page libraries_page Libraries
- *
- * \ref libs_Application
- *
- * \ref libs_Error
- *
- * \ref libs_DeployUtils
- *
- * \ref libs_Translation
- *
- * \ref libs_FileSystem
- *
- * \ref libs_Container
- *
- * \ref libs_ItemModel
- *
- * \ref libs_TestLib
- *
- * \ref libs_Entity
- *
+/*! \page libs_Container Little bridge library to STL
  */
+
+
+namespace Mdt
+{
+
+  /*! \brief Container namespace
+   */
+  namespace Container
+  {
+  }
+
+}
