Document how to create a repository with reflection

--- a/dox/example_PersonRepository.dox
+++ b/dox/example_PersonRepository.dox
@@ -19,7 +19,11 @@
  **
  ****************************************************************************/
 
-/*! \page example_Repository Repository example
+/*! \page example_PersonRepository Person repository example
+ *
+ * \todo Primary key
+ * \todo Unique constraint
+ * \todo SQL schema
  *
  * This example shows how a repository could be implemented.
  *
